<resources>
    <string name="app_name">Peacock Solar</string>

    <string name="name_caps">NAME</string>
    <string name="email_caps">EMAIL</string>
    <string name="phone_number_caps">PHONE NUMBER</string>
    <string name="password_caps">PASSWORD</string>
    <string name="username_example">username</string>
    <string name="email_example">example@domail.com</string>
    <string name="phone_number_example">enter phone number</string>
    <string name="password_example">enter password</string>

    <!-- TOOLBAR -->
    <string name="peacock_solar_toolbar">Peacock Solar</string>
    <string name="edit_profile_toolbar">Edit Profile</string>

    <!-- NAVIGATION DRAWER -->
    <string name="my_incentive">$ 203.18</string>
    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>

    <!-- MENU ITEMS -->
    <string name="nav_my_leads">My Leads</string>
    <string name="nav_add_lead">Add Lead</string>
    <string name="nav_check_proposal">Check Proposal</string>
    <string name="nav_check_incentive">Check Incentive</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_raise_query">Raise Query</string>
    <string name="nav_learn_more">Learn More</string>
    <string name="nav_sign_out">Sign Out</string>


    <!-- SPLASH SCREEN -->
    <string name="peacock">P E A C O C K</string>
    <string name="solar">S O L A R</string>
    <string name="sub_title">GREEN | CLEAN | SMART</string>

    <!-- SIGN-IN PAGE -->
    <string name="sign_in">Sign In</string>
    <string name="dose_not_have_an_account">dose not have an account?</string>
    <string name="sign_up_option">SignUp</string>

    <!-- SIGN-UP PAGE -->
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="sign_in_option">SignIn</string>

    <!-- PROFILE PAGE -->
    <string name="profile_hello">Hello</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_user_dob">Date of Birth</string>
    <string name="profile_username">Sherlock Holmes</string>
    <string name="profile_email_value">sherlock.holmes.0092@gmail.com</string>
    <string name="profile_phone_number_value">9343280082</string>
    <string name="profile_gender_value">Male</string>
    <string name="profile_user_dob_value">14/10/1892</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="profile_save">SAVE</string>

    <!-- ADD LEAD PAGE -->
    <string name="add_lead_details">Enter Lead Details</string>
    <string name="add_lead_name_hint">Full Name</string>
    <string name="add_lead_phone_number_hint">Phone Number</string>
    <string name="add_lead_email_hint">Email ID</string>
    <string name="add_lead_source_hint">Source</string>
    <string name="add_lead_address_hint">Complete Address</string>
    <string name="add_lead_button">Add Lead</string>

    <!-- CREATE PROPOSAL PAGE -->
    <string name="energy_info">Energy Information</string>
    <string name="avg_electricity_bill_hint">Avg. Electricity Bill</string>
    <string name="number_of_acs_hint">Number of ACs</string>
    <string name="plot_size_of_house_hint">Plot Size of House</string>
    <string name="number_of_family_members_hint">Number of Family Members</string>
    <string name="power_calculation_hint">Power Calculation</string>
    <string name="submit">Submit</string>

    <!-- MY LEADS PAGE -->
    <string name="name"> Name : </string>
    <string name="address"> Address : </string>
    <string name="lead_name"> Lead Name </string>
    <string name="lead_location_details"> Lead Location Details lead_location_details lead_location_details lead_location_details lead_location_details </string>
    <string name="contact"> CONTACT </string>
    <string name="message"> MESSAGE </string>
    <string name="create_proposal"> CREATE PROPOSAL </string>

    <!-- PROFILE PAGE SPINNER "GENDER" -->
    <string-array name="profile_spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>