<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/recycler_view_item_background_style_white"
    android:padding="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:elevation="2dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/lead_name_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/lead_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:text="@string/lead_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lead_address_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lead_name_info"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/lead_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:text="@string/lead_location_details" />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/lead_contact_info"
            android:layout_below="@+id/lead_address_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/button_background_style_blue"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/contact"/>

            <Button
                android:id="@+id/message_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background_style_blue"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/message" />

            <Button
                android:id="@+id/create_proposal_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background_style_blue"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/create_proposal" />

        </LinearLayout>

</RelativeLayout>