<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Components.AddLead.AddLeadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_style_white_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add_lead_details"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/name_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableEnd="@drawable/authentication_username"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/add_lead_name_hint"
            android:inputType="text"
            android:textColor="@color/blue"
            android:textColorHint="@color/soft_grey"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/phone_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableEnd="@drawable/authentication_phone_number"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/add_lead_phone_number_hint"
            android:inputType="phone"
            android:textColor="@color/blue"
            android:textColorHint="@color/soft_grey"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/email_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableEnd="@drawable/authentication_email"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/add_lead_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue"
            android:textColorHint="@color/soft_grey"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/date_of_birth_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/add_lead_source_hint"
            android:textColor="@color/blue"
            android:textColorHint="@color/soft_grey"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/icon_source" />


        <EditText
            android:id="@+id/date_of_birth_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/add_lead_address_hint"
            android:textColor="@color/blue"
            android:textColorHint="@color/soft_grey"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/icon_address" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background_style_blue"
            android:text="@string/add_lead_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:elevation="5dp" />

    </LinearLayout>

</ScrollView>