<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_background"
        android:elevation="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        app:title="Edit Profile"
        app:titleTextColor="@color/white"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/edit_profile_background"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/name_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:drawableEnd="@drawable/authentication_username"
            android:fontFamily="@font/poppins_light"
            android:inputType="text"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_email"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/email_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_value"
            android:drawableEnd="@drawable/authentication_email"
            android:fontFamily="@font/poppins_light"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_phone_number"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/phone_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_number_value"
            android:drawableEnd="@drawable/authentication_phone_number"
            android:fontFamily="@font/poppins_light"
            android:inputType="phone"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="Date of Birth"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/date_of_birth_edit_text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/profile_calendar"
            android:text="14/10/1892"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_gender"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="4dp"/>

        <Spinner
            android:id="@+id/gender_spinner_profile"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/profile_button_background"
            android:text="@string/profile_save"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:elevation="5dp" />

    </LinearLayout>

</LinearLayout>